--- a/index.html
+++ b/index.html
@@ -9,10 +9,107 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <style>
+        /* 3D Hero Effects */
+        #hero-3d-container {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            pointer-events: none;
+            overflow: hidden;
+            z-index: 1;
+        }
+
+        .hero-3d-element {
+            position: absolute;
+            background: linear-gradient(135deg, 
+                rgba(16, 185, 129, 0.2), 
+                rgba(6, 182, 212, 0.2)
+            );
+            border-radius: 50%;
+            filter: blur(80px);
+            opacity: 0.6;
+            animation: float 8s ease-in-out infinite alternate;
+        }
+
+        .hero-3d-element:nth-child(1) {
+            width: 600px;
+            height: 600px;
+            top: -200px;
+            right: -200px;
+            animation-delay: -2s;
+        }
+
+        .hero-3d-element:nth-child(2) {
+            width: 500px;
+            height: 500px;
+            bottom: -150px;
+            left: -150px;
+            animation-delay: -4s;
+            background: linear-gradient(135deg, 
+                rgba(14, 165, 233, 0.2), 
+                rgba(16, 185, 129, 0.2)
+            );
+        }
+
+        .hero-3d-element:nth-child(3) {
+            width: 400px;
+            height: 400px;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            animation-delay: -6s;
+            background: linear-gradient(135deg, 
+                rgba(236, 72, 153, 0.2), 
+                rgba(239, 68, 68, 0.2)
+            );
+        }
+
+        @keyframes float {
+            0% {
+                transform: translateY(0);
+            }
+            100% {
+                transform: translateY(50px);
+            }
+        }
+
+        .hero-gradient-overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: radial-gradient(
+                circle at 30% 80%, 
+                rgba(16, 185, 129, 0.1), 
+                transparent 50%
+            );
+            pointer-events: none;
+            z-index: 2;
+        }
+
+        .hero-grid-overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-image: 
+                linear-gradient(to right, rgba(17, 24, 39, 0.03) 1px, transparent 1px),
+                linear-gradient(to bottom, rgba(17, 24, 39, 0.03) 1px, transparent 1px);
+            background-size: 30px 30px;
+            opacity: 0.3;
+            pointer-events: none;
+            z-index: 3;
+        }
+    </style>
 </head>
 <body>
     <!-- Navigation -->
-    <nav id="main-nav" class="fixed w-full z-50 transition-all py-4">
+    <nav id="main-nav" class="fixed w-full z-50 transition-all py-6">
         <div class="container">
             <div class="nav-content">
                 <div class="logo">
@@ -36,13 +133,17 @@
     </nav>
 
     <!-- Hero Section -->
-    <section id="hero" class="pt-32 pb-20 px-4 relative overflow-hidden">
-        <div class="hero-bg-1"></div>
-        <div class="hero-bg-2"></div>
+    <section id="hero" class="pt-40 pb-20 px-4 relative overflow-hidden">
+        <div id="hero-3d-container">
+            <div class="hero-3d-element"></div>
+            <div class="hero-3d-element"></div>
+            <div class="hero-3d-element"></div>
+        </div>
+        <div class="hero-gradient-overlay"></div>
+        <div class="hero-grid-overlay"></div>
         
         <div class="container relative z-10">
             <div class="hero-grid">
-                <!-- Hero Content Column -->
                 <div class="hero-content">
                     <h1 class="hero-title">
                         Let AI Tell You Who's<br>
@@ -67,21 +168,39 @@
                         </a>
                     </div>
                 </div>
-
-                <!-- Dashboard Preview Column (Replaces top contact form) -->
-                <div class="dashboard-preview">
-                    <div class="dashboard-card" style="background: rgba(17,24,39,0.8); padding: 1.5rem; border-radius: 0.5rem;">
-                        <h2 class="dashboard-title" style="font-size: 1.5rem; font-weight: 600; margin-bottom: 1rem;">Dashboard Overview</h2>
-                        <div class="dashboard-stats" style="display: flex; gap: 2rem;">
-                            <div class="dashboard-stat">
-                                <p class="stat-label" style="color: var(--color-lighter);">Total Leads</p>
-                                <p class="stat-value" style="font-size: 1.25rem; font-weight: 700;">1,247</p>
-                            </div>
-                            <div class="dashboard-stat">
-                                <p class="stat-label" style="color: var(--color-lighter);">Qualified Leads</p>
-                                <p class="stat-value" style="font-size: 1.25rem; font-weight: 700;">389</p>
-                            </div>
+                
+                <div class="contact-form-container mt-8 md:mt-0">
+                    <div class="contact-form-wrapper">
+                        <h3 class="form-title">Contact Us</h3>
+                        <div id="form-success" class="form-success hidden">
+                            <i class="fas fa-check"></i>
+                            <p>Message sent! We'll be in touch soon.</p>
                         </div>
+                        <form id="contact-form" class="contact-form">
+                            <div class="form-group">
+                                <label for="name">Name *</label>
+                                <input type="text" id="name" name="name" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="email">Email *</label>
+                                <input type="email" id="email" name="email" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="company">Company Name</label>
+                                <input type="text" id="company" name="company">
+                            </div>
+                            <div class="form-group">
+                                <label for="message">Message</label>
+                                <textarea id="message" name="message" rows="4"></textarea>
+                            </div>
+                            <div id="form-error" class="form-error hidden"></div>
+                            <button type="submit" class="form-submit-button">
+                                <span class="button-background"></span>
+                                <span class="button-shine"></span>
+                                <span class="button-overlay"></span>
+                                <span class="button-content">Send Message</span>
+                            </button>
+                        </form>
                     </div>
                 </div>
             </div>
@@ -359,7 +478,7 @@
         </div>
     </section>
 
-    <!-- Final CTA Section (Contact Form at the Bottom) -->
+    <!-- Final CTA Section -->
     <section id="contact" class="py-20 px-4 relative">
         <div class="cta-bg-1"></div>
         <div class="cta-bg-2"></div>
